fix: modal overflowing screen

--- a/client/src/components/Modal/styles.scss
+++ b/client/src/components/Modal/styles.scss
@@ -12,11 +12,12 @@
   transition: 0.7s;
   border: 2px solid var(--quinary);
   color: var(--white);
+  max-height: 95vh;
 
   .modal--close {
     position: absolute;
     top: 15px;
-    right: 10px;
+    right: 20px;
     font-size: 20px;
     cursor: pointer;
   }
@@ -29,6 +30,18 @@
 
   .modal--content {
     padding: 15px 10px;
+    max-height: 80vh;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+      width: 12px;
+    }
+  
+    &::-webkit-scrollbar-thumb {
+        box-shadow: inset 0 0 10px var(--tertiary);
+        border: solid 3px transparent;
+        border-radius: 8px;
+    }
   }
 
   .modal--footer {
